--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -1,5 +1,3 @@
 <div class="navbar bg-neutral text-neutral-content">
-    <button class="btn btn-ghost text-xl">daisyUI</button>
-    <a href="" class="navbar-start">Home</a>
-    <a href="" class="navbar-end">Login</a>
-</div>
+    <a href="/" class="btn btn-ghost text-xl">StudySync</a>
+  </div>
