--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -1,5 +1,9 @@
 <div class="navbar bg-neutral text-neutral-content">
     <button class="btn btn-ghost text-xl">daisyUI</button>
-    <a href="" class="navbar-start">Home</a>
-    <a href="" class="navbar-end">Login</a>
+    <div class="navbar-items">
+        <a href="" class="navbar-start">Home</a>
+        <a href="" class="navbar-contact">Contact</a>
+        <a href="" class="navbar-messages">Messages</a>
+        <a href="" class="navbar-end">Login</a>
+    </div>
 </div>
