--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 <div class="navbar bg-neutral text-neutral-content">
     <button class="btn btn-ghost text-xl">daisyUI</button>
     <div class="navbar-items">
-        <a href="" class="navbar-start">Home</a>
-        <a href="" class="navbar-contact">Contact</a>
-        <a href="" class="navbar-messages">Messages</a>
-        <a href="" class="navbar-end">Login</a>
+        <a routerLink="/" class="navbar-start">Home</a>
+        <a routerLink="/contact" class="navbar-contact">Contact</a>
+        <a routerLink="/messages" class="navbar-messages">Messages</a>
+        <a routerLink="/login" class="navbar-end">Login</a>
     </div>
 </div>
